Chatservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-serv-service
spec:
  ports:
    - port: 8002
      targetPort: 80
  selector:
    app: chat
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  labels:
    app: chat # a service ez alapján ismeri fel
spec:
  replicas: 1
  selector:
    matchLabels: # milyen podokat akar a megadott számban futtatni
      chatapp: chatservice # kulcs-érték
  template: #pod
    metadata:
      labels:
        chatapp: chatservice
    spec:
      containers:
        - name: chat-service # microservice
          image: petersebestyen/chatservice
          ports:
            - name: chat-port
              containerPort: 8000
        - name: mysql # database
          image: mysql
          ports: # pod specifikus dolgok
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-chat-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-chat-storage
          persistentVolumeClaim:
            claimName: mysql-persistent-storage
